# cargo-bindep-panic

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
build-only-dep/: Cargo.toml
dep-that-depends-on-build-only-dep/: Cargo.toml
some-leaf-dep/: Cargo.toml
top-level-that-depends-on-bindep/: Cargo.toml
will-get-bindeped/: Cargo.toml
