[workspace]
resolver = "2"

members = [
    "top-level-that-depends-on-bindep",
    # |
    # | [dependencies] artifact = "bin", target = "x86_64-fortanix-unknown-sgx"
    # |     - or -
    # | [build-dependencies] artifact = "bin", target = "x86_64-fortanix-unknown-sgx"
    # V
    "will-get-bindeped",
    # |
    # | [dependencies]
    # V
    "dep-that-depends-on-build-only-dep",
    # |
    # | [build-dependencies]
    # V
    "build-only-dep",
    # |
    # | [target.'cfg(unix)'.dependencies]
    # V
    "some-leaf-dep",
]
